# AutoDrive-AI

./: README.docx  README.md  ~$README.docx
Orin_Nano_DEPTH_Camera_Distance/Visual_Soild_D/Visual_Soild_D/: CMakeLists.txt  YOLO_TRT.cpp  YOLO_TRT.h  main_ob.cpp
Orin_Nano_PX6C/PX6C_Lua_Control/: Fin_SBUS2_drive.lua  RC_SBUS1_drive.lua  RC_TTL_drive.lua
RDKX5_IMU_DEPTH_Camera/DEPTH_Camera_SDK/: main_ob.cpp
RDKX5_IMU_DEPTH_Camera/IMU/: main.cpp  test_imu.py
TEST_LEARNING/: Deepstream_app_config0.txt
UAV_Action_Prediction_Trial/AutoDrive/: sports_culture_stages.py
UAV_Action_Prediction_Trial/AutoDrive/AUTODrive/ENET/: Train_normalA.py  Train_normalB.py  model.py
UAV_Action_Prediction_Trial/AutoDrive/AUTODrive/Transformer_Encode/CNNS/: ENET_Handle.py  Transformer_Encoder.py  model.py
UAV_Action_Prediction_Trial/AutoDrive/Dateset/: Handle_Draw.py  Image_Video.py  Label_Mask.py  Video_Image.py
UM982_RTK/: UM982_RTK.docx
Visual_K230_Drive/Person/Person/: Detect.py
Visual_K230_Drive/Person/Person/kmodel_model/: test_Person.kmodel  test_Vessel.kmodel
Visual_K230_Drive/Vessel/Vessel/: Detect.py
